big cleanup in the bytebuddy package